# BitFlip

./: CMakeLists.txt  LICENSE  README.md  andgate.cpp  andgate.h  assets.qrc  canvas.cpp  canvas.h  component.cpp  component.h  connection.cpp  connection.h  connectionpoint.cpp  connectionpoint.h  gate.cpp  gate.h  images.qrc  inputitem.cpp  inputitem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newproject.cpp  newproject.h  newproject.ui  outputitem.cpp  outputitem.h  wire.cpp  wire.h
